--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "country-flag-icons": "^1.5.19",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
