--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.12",
@@ -19,9 +21,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "country-flag-icons": "^1.5.19",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
+    "cmdk": "^1.1.1",
+    "country-data-list": "^1.5.4",
+    "react-circle-flags": "^0.0.23",
     "react-dom": "^19.1.1",
     "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
